--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 libn2n = { git = "https://github.com/ChingCdesu/n2n-rust.git", branch = "main" }
 log = "0.4.20"
+libc = "0.2.101"
+cidr = "0.2.2"
+thiserror = "1.0.50"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
